--- a/pcom-general.css
+++ b/pcom-general.css
@@ -1,6 +1,8 @@
 /********
  GENERAL
  ********/
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 * {	box-sizing: border-box; }
 
@@ -33,7 +35,7 @@ input::placeholder {
 
 body {
 	height: 100%;
-	font-family: Verdana, Tahoma, Helvetica, Arial, sans-serif;
+	font-family: "Inter", Verdana, Tahoma, Helvetica, Arial, sans-serif;
 	margin: 0;
 	min-width: 350px;
 	font-size: 100% !important;
